--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,19 @@
-org.gradle.jvmargs=-Xmx1G
-minecraft_version=1.19
+org.gradle.jvmargs=-Xmx3G
+
+# mod info
 archives_base_name=mcpitanlib2
 mod_version=2.0.0
 maven_group=ml.pkom
+
+# https://www.curseforge.com/minecraft/mc-mods/architectury-api
 architectury_version=5.8.29
+
+# https://fabricmc.net/develop/
+minecraft_version=1.19
 fabric_loader_version=0.14.8
 fabric_api_version=0.57.0+1.19
+
+yarn_mappings=1.19+build.4
+
+# https://files.minecraftforge.net/net/minecraftforge/forge/
 forge_version=1.19-41.0.94
