--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -26,11 +26,13 @@ dependencies {
 }
 
 processResources {
-    inputs.property "version", project.version
+    inputs.property "version", rootProject.mod_version
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version
+        expand "version": rootProject.mod_version
     }
+
+    project.version = project.version + "-fabric"
 }
 
 shadowJar {
