--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -24,11 +24,13 @@ dependencies {
 }
 
 processResources {
-    inputs.property "version", project.version
+    inputs.property "version", rootProject.mod_version
 
     filesMatching("META-INF/mods.toml") {
-        expand "version": project.version
+        expand "version": rootProject.mod_version
     }
+
+    project.version = project.version + "-forge"
 }
 
 shadowJar {
