--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx3G
 
 # mod info
 archives_base_name=mcpitanlib2
-mod_version=2.0.0
+mod_version=2.0.1-rc1
 maven_group=ml.pkom
 
 # https://www.curseforge.com/minecraft/mc-mods/architectury-api
